# cameravision

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst  requirements.txt
docs/explanation/: distortion-validity.rst  reprojection.rst
src/cameravision/: __init__.py  cameravision.py  reprojection.py  validity.py
tests/: conftest.py  test_camera.py  test_distortion.py  test_jacobian.py  test_reproject_image.py  test_reprojection.py  test_validity.py
