[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cameravision"
dynamic = ["version"]
description = "Transitional package. cameravision has been renamed to deltacamera."
authors = [
    { name = "István Sárándi", email = "istvan.sarandi@uni-tuebingen.de" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

keywords = [
    "camera",
    "calibration",
    "computer-vision",
    "image-warping",
    "distortion",
    "lens-distortion",
    "reprojection",
]

classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "deltacamera",
]

[project.urls]
Homepage = "https://github.com/isarandi/deltacamera"
Repository = "https://github.com/isarandi/deltacamera"
Documentation = "https://deltacamera.readthedocs.io/"
Issues = "https://github.com/isarandi/deltacamera/issues"
Author = "https://istvansarandi.com"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
version_file = "src/cameravision/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]